# openmls_dart

./: .copier-answers.yml  .fvmrc  .gitattributes  .gitignore  .pubignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pubspec.yaml
.cargo/: audit.toml
.claude/skills/build-native/: SKILL.md
.claude/skills/release-frb-crate/: SKILL.md
.claude/skills/release-package/: SKILL.md
.claude/skills/update-openmls/: SKILL.md
.github/: UPDATER_APP.md  dependabot.yml
.github/actions/setup-fvm/: action.yml
.github/actions/setup-make/: action.yml
.github/actions/setup-rust/: action.yml
.github/rulesets/: README.md  delete-branches.json  protect-main.json  protect-release-tags.json  signing-commit.json
.github/workflows/: build-openmls.yml  check-openmls-updates.yml  check-template-updates.yml  fuzz.yml  publish.yml  test-reusable.yml  test.yml
assets/: THIRD_PARTY_NOTICES.txt
example/: README.md
example/lib/: main.dart
example_cli/: README.md
example_cli/lib/demos/: post_quantum_demo.dart
hook/: build.dart
lib/: openmls.dart
lib/src/: openmls.dart  third_party_notices.dart
lib/src/platform/: native_asset_manifest.dart  platform_io.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: config.dart  credential.dart  engine.dart  init.dart  keys.dart  message.dart  storage.dart  types.dart
rust/: Cargo.toml  LICENSE  deny.toml
rust/.cargo/: config.toml
rust/fuzz/: Cargo.toml
rust/fuzz/examples/: gen_corpus.rs
rust/fuzz/fuzz_targets/: credential.rs  mls_message.rs
rust/src/: encrypted_db.rs  frb_generated.rs  hybrid_crypto.rs  lib.rs  snapshot_storage.rs
rust/src/api/: config.rs  credential.rs  engine.rs  keys.rs  message.rs  mod.rs  storage.rs  support.rs  types.rs
scripts/: README.md  check_deployment_targets.dart  check_exists_frb_release.dart  check_new_upstream_version.dart  generate_third_party_notices.dart  get_android_min_sdk.dart  release.dart  release_frb.dart  setup_repo_protections.dart  update_changelog.dart
scripts/src/: check_template_updates.dart  check_updates.dart  common.dart  release.dart  release_common.dart  release_frb.dart  update_changelog.dart
test/: api_types_test.dart  error_handling_test.dart  external_storage_test.dart  group_lifecycle_test.dart  keys_test.dart  native_asset_manifest_test.dart  test_helpers.dart  third_party_notices_test.dart
test/hook/: build_hook_test.dart
test/scripts/: check_updates_test.dart  release_frb_test.dart  release_test.dart  update_changelog_test.dart
