[package]
name = "openmls_frb"
version = "1.4.0"
edition = "2024"
rust-version = "1.88"
description = "Dart wrapper for OpenMLS — a Rust implementation of the Messaging Layer Security (MLS) protocol (RFC 9420)"
repository = "https://github.com/djx-y-z/openmls_dart"
license = "MIT"
publish = false

[lib]
name = "openmls_frb"
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
thiserror = "2.0"
log = "0.4"
zeroize = { version = "1.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
parking_lot = "0.12"
openmls = { git = "https://github.com/openmls/openmls", tag = "openmls-v0.8.1", features = ["test-utils"] }
openmls_rust_crypto = { git = "https://github.com/openmls/openmls", tag = "openmls-v0.8.1" }
openmls_basic_credential = { git = "https://github.com/openmls/openmls", tag = "openmls-v0.8.1", features = ["test-utils"] }
openmls_traits = { git = "https://github.com/openmls/openmls", tag = "openmls-v0.8.1" }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.34", features = ["bundled-sqlcipher-vendored-openssl"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# OpenMLS requires `js` feature for WASM: enables fluvio_wasm_timer for time access
# Cargo merges features from [dependencies] and [target.*.dependencies]
openmls = { git = "https://github.com/openmls/openmls", tag = "openmls-v0.8.1", features = ["js"] }
# Diamond dependency: some upstream crates use getrandom 0.2, some use 0.3
# Both need to be configured for WASM to work correctly
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
idb = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console", "Window", "Performance",
    "Crypto", "SubtleCrypto", "CryptoKey",
    "AesGcmParams",
] }

[profile.release]
lto = true
opt-level = "z"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(frb_expand)"] }
